--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@ Always verify before sending **Always double-check!**</p>
             <img src="assets/partners/mariam-products.png" alt="Mariam Seba Products Factory">
         </a>
         
-        <a href="projectHOPE2025.github.io" target="_blank" class="partner-logo-link">
-            <img src="assets/partners/project-hope.png" alt="Project HOPE Initiative">
+        <a href="https://acso.gov.et/en" target="_blank" class="partner-logo-link">
+            <img src="assets/partners/acso.png" alt="Authority for Civil Society Organizations">
         </a>
         
       </div>
@@ -356,5 +356,6 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
 
