--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
         <div class="phase-card">
           <div class="phase-number">I</div>
           <h3>Phase I: Pilot (Addis Ababa)</h3>
-          <p class="target-girls"><strong>3,000</strong> School Girls</p>
-          <p class="target-fund">Target: <strong>$30,000 USD</strong></p>
+          <p class="target-girls"><strong>10,000</strong> School Girls</p>
+          <p class="target-fund">Target: <strong>$100,000 USD</strong></br>Launch pilot manufacturing, testing & digital tracking</p>
         </div>
         <div class="phase-card">
           <div class="phase-number">II</div>
           <h3>Phase II: Regional Scale</h3>
-          <p class="target-girls"><strong>10,000</strong> School Girls</p>
-          <p class="target-fund">Target: <strong>$100,000 USD</strong></p>
+          <p class="target-girls"><strong>30,000</strong> School Girls</p>
+          <p class="target-fund">Target: <strong>$300,000 USD</strong></p>
         </div>
         <div class="phase-card">
           <div class="phase-number">III</div>
@@ -365,6 +365,7 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
 
 
