--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
           <div class="phase-number">II</div>
           <h3>Phase II: Regional Scale</h3>
           <p class="target-girls"><strong>30,000</strong> School Girls</p>
-          <p class="target-fund">Target: <strong>$300,000 USD</strong></p>
+          <p class="target-fund">Target: <strong>$300,000 USD</strong></br>Expand to 5 regions; increase production capacity</p>
         </div>
         <div class="phase-card">
           <div class="phase-number">III</div>
           <h3>Phase III: National Outreach</h3>
           <p class="target-girls"><strong>100,000+</strong> School Girls</p>
-          <p class="target-fund">Target: <strong>$1,000,000 USD</strong></p>
+          <p class="target-fund">Target: <strong>$1,000,000 USD</strong></br>Achieve national coverage with transparent distribution tracking</p>
         </div>
       </div>
     </div>
@@ -365,6 +365,7 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
 
 
