--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <img src="assets/transparency.png" alt="Transparency Infographic" class="transparency-image" />
       
       <div class="cta-button-row">
-        <a class="btn btn-primary" href="https://dune.com/browse/dashboards?tags=project+hope" target="_blank">View Live Dune Analytics Dashboard</a>
+        <a class="btn btn-primary" href="https://dune.com/project_hope" target="_blank">View Live Dune Analytics Dashboard</a>
       </div>
     </div>
   </section>
@@ -340,3 +340,4 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
