--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
         <div class="stat-card">
           <p class="stat-number">1.3 Million Each Month</p>
-          <p class="stat-text">A UK-documented report noted: “In Ethiopia … approximately 1 in 10 girls miss school due to their period, which equates to ~1.3 million girls each month.</p>
+          <p class="stat-text">A UK-documented report noted: “In Ethiopia … approximately 1 in 10 girls miss school each day due to their period, which equates to ~1.3 million girls each month.</p>
         </div>
         <div class="stat-card">
           <p class="stat-number">67% LACK KNOWLEDGE</p>
@@ -340,4 +340,5 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
+
 
