--- a/index.html
+++ b/index.html
@@ -245,6 +245,15 @@ Always verify before sending **Always double-check!**</p>
       <h2>Support Project HOPE — Donate in Crypto</h2>
       <p class="lead-text">Each $10 = 1 complete reusable pad kit (3–5 years). Scan a QR or copy the address below. Also, be informed that to avoid volatility and ensure that your donated funds are used for their intended cause without losing value, our main donation wallet is USDT (BEP-20).</p>
 
+      <div class="multi-sig-wallet-container">
+        <div class="multi-sig-wallet-card">
+          <h3>⭐ Our Main Multi-Sig Wallet ⭐</h3>
+          <img src="assets/qrcodes/multi-sig.png" alt="Main Multi-Sig Wallet QR Code">
+          <div class="wallet-label">BNB Smart Chain (BEP-20 standard)</div>
+          <p class="wallet-warning">⚠️ Send only **BNB or BEP-20 tokens** to this address.</p>
+          <button class="copy-btn" data-address="0x2E7C26Bd90bd404A68e2d7eDbE00B6a834834fD9">Copy address</button>
+        </div>
+      </div>
       <div class="wallet-grid">
         <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-bep20.png" alt="USDT BEP-20 QR"><div class="wallet-label">USDT (BEP-20)</div><p class="wallet-warning">⚠️ Send only **USDT** on **BEP-20**</p><button class="copy-btn" data-address="0x7B285561DDB307FCbf1e45a4e8097dEdc4dAAa2a">Copy address</button></div>
         <div class="wallet-card"><img src="assets/qrcodes/qr-usdt-trc20.png" alt="USDT TRC-20 QR"><div class="wallet-label">USDT (TRC-20)</div><p class="wallet-warning">⚠️ Send only **USDT** on **TRC-20**</p><button class="copy-btn" data-address="TUnuHBye1Nz474RzBHxYUSoK8a5VGycBjU">Copy address</button></div>
@@ -304,7 +313,7 @@ Always verify before sending **Always double-check!**</p>
             <img src="assets/partners/mariam-products.png" alt="Mariam Seba Products Factory">
         </a>
         
-        <a href="https://acso.gov.et/en" target="_blank" class="partner-logo-link">
+        <a href="httpsD://acso.gov.et/en" target="_blank" class="partner-logo-link">
             <img src="assets/partners/acso.png" alt="Authority for Civil Society Organizations">
         </a>
         
@@ -321,7 +330,7 @@ Always verify before sending **Always double-check!**</p>
     <a href="https://twitter.com/ProjectHope2025" aria-label="Twitter/X" target="_blank">Twitter/X</a>
     <a href="https://instagram.com/project_hope2025" aria-label="Instagram" target="_blank">Instagram</a>
     <a href="https://www.linkedin.com/in/project-hope-pads4dignity-for-dignity" aria-label="LinkedIn" target="_blank">LinkedIn</a>
-    <a href="https://discordapp.com/users/project_hope2025" aria-label="Discord" target="_blank">Discord</a>
+    <a href="httpsD://discordapp.com/users/project_hope2025" aria-label="Discord" target="_blank">Discord</a>
     <a href="https://wa.me/251708129279" aria-label="WhatsApp" target="_blank">WhatsApp</a>
     <a href="mailto:info@project-hope2025.org" aria-label="Email">Email</a>
 </div>
@@ -340,7 +349,3 @@ Always verify before sending **Always double-check!**</p>
 
 </body>
 </html>
-
-
-
-
